# Substring

./: .gitignore  CMakeLists.txt  Substring.pro  debug_cout.h  main.cpp  mainTest.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  text_input.cpp  text_input.h
scanners/: CMakeLists.txt  file_digger.cpp  file_digger.h  file_substring.cpp  file_substring.h  string_input.cpp  string_input.h  stringinput.ui
scanners/trigram/: CMakeLists.txt  trigram.cpp  trigram.h  trigram_counter.cpp  trigram_counter.h  trigram_tree.cpp  trigram_tree.h  trigram_tree.hpp
test/: input.txt
